src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the artists agent</description>
        <label>Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agent</relationshipLabel>
        <relationshipName>Agent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AlternativeNames__c</fullName>
        <description>Stores the former value of venue name, if venue name has changed</description>
        <label>Alternative Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplyGlobalTermsTo__c</fullName>
        <label>Apply Global Terms To</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amphitheatre</fullName>
                </value>
                <value>
                    <fullName>Theater</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Arena</fullName>
                </value>
                <value>
                    <fullName>Stadium</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Boutique Amphitheatre</fullName>
                </value>
                <value>
                    <fullName>Comedy Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary BU first-level approver</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverForOffices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The secondary BU first-level approver</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApproverForOffices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ArtistDataReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Artist Data Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ArtistAccountsInReview</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BUApprover1__c</fullName>
        <formula>IF(ISPICKVAL(Type, &quot;Business Unit&quot;), Approver1__c, 
IF (ISPICKVAL(Parent.Type, &quot;Business Unit&quot;), Parent.Approver1__c, 
null))</formula>
        <label>BU Approver 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUApprover2__c</fullName>
        <formula>IF(ISPICKVAL(Type, &quot;Business Unit&quot;), Approver2__c, 
IF (ISPICKVAL(Parent.Type, &quot;Business Unit&quot;), Parent.Approver2__c, 
null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU Approver 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUGuaranteeApprovalThreshold__c</fullName>
        <formula>IF(ISPICKVAL(Type, &quot;Business Unit&quot;), GuaranteeApprovalThreshold__c, 
IF (ISPICKVAL(Parent.Type, &quot;Business Unit&quot;), Parent.GuaranteeApprovalThreshold__c, 
null))</formula>
        <label>BU Guarantee Approval Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <formula>IF (ISPICKVAL(Type, &quot;Business Unit&quot;), Name, 
IF (ISPICKVAL(Parent.Type, &quot;Business Unit&quot;), Parent.Name, 
IF (ISPICKVAL(Type, &quot;Division&quot;) &amp;&amp; DivisionIsBusinessUnit__c, Name,
&quot;&quot;)))</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>Captures the venues maximum capacity</description>
        <label>Capacity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClassicAccountMerge__c</fullName>
        <description>As Account Merge is currently not supported within Lightining Experience
this creates a link to the account merge.
Please note that the retURL is not being honored currently.</description>
        <formula>HYPERLINK( &quot;/merge/accmergewizard.jsp?retURL=%2Fone%2Fone.app%3Fsource%3Daloha%23%2FsObject%2F&quot; + Id + &quot;%2Fview%3Ft%3D1472657299136&amp;srch=&quot; + Name , &quot;Open Classic Account Merge&quot;, &quot;_blank&quot;)</formula>
        <inlineHelpText>Opens the Classic Account Merge Tool.</inlineHelpText>
        <label>Classic Account Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoPromoterDataReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Promoter Data Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CoPromoterAccountsInReview</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommissionPercent__c</fullName>
        <label>Commission Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMA__c</fullName>
        <label>DMA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DMA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DivisionIsBusinessUnit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the division also serves as a business unit (perhaps there are no business units), then check this box to enable reporting and other areas to identify the division also as a business unit.</inlineHelpText>
        <label>Division Is Business Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Formula to capture the offices&apos; and venues&apos; division if applicable</description>
        <formula>CASE (RecordType.DeveloperName,

&quot;Office&quot;,
IF (ISPICKVAL(Type, &quot;Division&quot;), Name, 
IF (ISPICKVAL(Parent.Type, &quot;Division&quot;), Parent.Name, 
IF (ISPICKVAL(Parent.Parent.Type, &quot;Division&quot;), Parent.Parent.Name,
&quot;&quot;))),

&quot;Venue&quot;,
IF (ISPICKVAL(PrimaryOffice__r.Type, &quot;Division&quot;), PrimaryOffice__r.Name, 
IF (ISPICKVAL(PrimaryOffice__r.Parent.Type, &quot;Division&quot;), PrimaryOffice__r.Parent.Name, 
IF (ISPICKVAL(PrimaryOffice__r.Parent.Parent.Type, &quot;Division&quot;), PrimaryOffice__r.Parent.Parent.Name,
&quot;&quot;))),

&quot;&quot;)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Company or corporate email account</description>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExcludeVenuefromBPCUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude these venues from BPC integration if the value =true</description>
        <label>Exclude Venue from BPC Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExcludeVenuefromOracleUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Venue from Oracle Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FeedEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feed Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MediaFormatType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLCompanyName__c</fullName>
        <label>GL Company Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLCompanyName</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GLCompanyVenueType__c</fullName>
        <label>GL Company Venue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VenueType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genre__c</fullName>
        <description>Defines the musical genre of the artist</description>
        <label>Genre</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Genre</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <formula>IF(ISPICKVAL(Type, &quot;Geography&quot;), Name, 
IF(ISPICKVAL(Parent.Type, &quot;Geography&quot;), Parent.Name, 
IF(ISPICKVAL(Parent.Parent.Type, &quot;Geography&quot;), Parent.Parent.Name,
IF(ISPICKVAL(Parent.Parent.Parent.Type, &quot;Geography&quot;), Parent.Parent.Parent.Name,
IF(ISPICKVAL(Parent.Parent.Parent.Parent.Type, &quot;Geography&quot;), Parent.Parent.Parent.Parent.Name,
&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalTermsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether managers should be notified that the Global Terms have updated.</inlineHelpText>
        <label>Global Terms Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GlobalTerms__c</fullName>
        <description>These are the terms &amp; conditions that apply to venues underneath the combination division-venue type</description>
        <inlineHelpText>These are the terms &amp; conditions that apply to venues underneath the combination division-venue type</inlineHelpText>
        <label>Global Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GuaranteeApprovalThreshold__c</fullName>
        <description>Defines the BU-level threshold amount requiring approval; BU Event guarantees exceeding this amount will require approval</description>
        <label>Guarantee Approval Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If field is checked, account record should not be visible to any user except system administrators or integration users.</description>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntegrationStatus__c</fullName>
        <description>09/14/2016 Henry Akpala; Created to track integration status of the record.</description>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LNEAPIId__c</fullName>
        <description>Livenation.comAPI Id</description>
        <externalId>true</externalId>
        <label>LNE API Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNEAPIName__c</fullName>
        <description>Livenation.com api name</description>
        <label>LNE API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNEAPITicketMasterId__c</fullName>
        <label>LNE API TicketMaster Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LNEMDID__c</fullName>
        <displayFormat>AC-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>LNEMDID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LNEUrlSlug__c</fullName>
        <description>Livenation.com api url_slug</description>
        <label>LNE Url Slug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestAccountRequest__c</fullName>
        <description>Used within logic to feed the Requested Account Updates.</description>
        <inlineHelpText>The latest request made for this account.</inlineHelpText>
        <label>Latest Account Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LocalTerms__c</fullName>
        <inlineHelpText>Venue specific terms (as opposed to global terms)</inlineHelpText>
        <label>Local Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MainOfficeCheckbox__c</fullName>
        <description>Checks if the account record parent is blank, if so that indicates this is the main office in a hierarchy.</description>
        <formula>IF ((Parent.Name) = NULL, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MediaType__c</fullName>
        <label>Media Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Television</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Prd/Misc</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfficeDivisionType__c</fullName>
        <description>Utility field specifying the division and type of the account.
Useful to avoid governor limits when updating Global Terms,
but also allows for additional buckets of accounts available for reports/analytics.</description>
        <formula>PrimaryOffice__r.Division__c + 
  $Setup.DataGenerationSettings__c.CombinedKeyDelimiter__c +
  TEXT(Type)</formula>
        <label>Office Division Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeID__c</fullName>
        <label>Office ID</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleCompanyId__c</fullName>
        <label>Oracle Company Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OwnershipType__c</fullName>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owned/Operated</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Exclusively Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreviousGlobalTerms__c</fullName>
        <description>This is defined through a trigger - and when the Global Terms are applied based on the matching Divison Office / Venue Type.</description>
        <inlineHelpText>Global Terms used previously before the last application from the Division</inlineHelpText>
        <label>Previous Global Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the primary agency of the artist for North America</description>
        <label>US Primary Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>US Primary Agency</relationshipLabel>
        <relationshipName>USPrimaryAgency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryOffice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Office</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Office</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Primary Venues</relationshipLabel>
        <relationshipName>Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedAccountUpdates__c</fullName>
        <inlineHelpText>Running log of the requests made to this account.</inlineHelpText>
        <label>Requested Account Updates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RoomHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Room Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SponsorDataReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Data Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Displays the status of the account (active, inactive)</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>Dependent on type</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HOB Club-Club Nights</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Music Hall</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Foundation Room</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Restaurant</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Special Event</fullName>
                </value>
                <value>
                    <fullName>HOB Club-Special Event Room</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TBDVenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify TBD Venues.  Used in Apex to perform calculations based on business processes.</description>
        <label>TBD Venue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMEventDBVenueID__c</fullName>
        <label>TM Event DB Venue ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMHost__c</fullName>
        <label>TM Host</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMVenueName__c</fullName>
        <label>TM Venue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetPaidTickets__c</fullName>
        <description>Paid ticket target threshold for venues</description>
        <label>Target Paid Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetTalentPct__c</fullName>
        <description>Target for talent threshold as a % of net gross for venues</description>
        <label>Target Talent %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VendorDataReviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Data Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VendorAccountsInReview</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VenueName__c</fullName>
        <label>Venue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accHierarchy__Hierarchy_Parents__c</fullName>
        <label>Hierarchy Parents</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>accHierarchy__On_Previous_Hierarchy_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Previous Hierarchy Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accHierarchy__TopParentId__c</fullName>
        <label>Top Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accHierarchy__hasChildWithChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Child With Changes</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccountsInReview</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <label>All Accounts in Review</label>
        <sharedTo>
            <group>ArtistDataReview</group>
            <group>CoPromoterDataReview</group>
            <group>VendorDataReview</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAgencies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>MainOfficeCheckbox__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Agency</value>
        </filters>
        <label>All Agencies</label>
    </listViews>
    <listViews>
        <fullName>AllArtists</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Genre__c</columns>
        <columns>PrimaryAgency__c</columns>
        <columns>Agent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Artist</value>
        </filters>
        <label>All Artists</label>
    </listViews>
    <listViews>
        <fullName>AllCoPromoters</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CoPromoter</value>
        </filters>
        <label>All Co-Promoters</label>
    </listViews>
    <listViews>
        <fullName>AllOffices</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Division__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Office</value>
        </filters>
        <label>All Offices</label>
    </listViews>
    <listViews>
        <fullName>AllSponsors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Sponsor</value>
        </filters>
        <label>All Sponsors</label>
    </listViews>
    <listViews>
        <fullName>AllTicketAgencies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.TicketAgency</value>
        </filters>
        <label>All Ticket Agencies</label>
    </listViews>
    <listViews>
        <fullName>AllVendors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>MediaType__c</columns>
        <columns>Format__c</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,In Review</value>
        </filters>
        <filters>
            <field>VendorDataReviewer__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Vendors</label>
    </listViews>
    <listViews>
        <fullName>AllVenues</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Capacity__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>Market__c</columns>
        <columns>Division__c</columns>
        <columns>PrimaryOffice__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>Status__c</columns>
        <columns>OwnershipType__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Venue</value>
        </filters>
        <label>All Venues</label>
    </listViews>
    <listViews>
        <fullName>ArtistDataReview</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Genre__c</columns>
        <columns>PrimaryAgency__c</columns>
        <columns>Agent__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Artist</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <filters>
            <field>ArtistDataReviewer__c</field>
            <operation>equals</operation>
        </filters>
        <label>Artist Data Review</label>
        <sharedTo>
            <group>ArtistDataReview</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CoPromoterDataReview</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.PHONE2</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CoPromoter</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <filters>
            <field>CoPromoterDataReviewer__c</field>
            <operation>equals</operation>
        </filters>
        <label>Co-Promoter Data Review</label>
        <sharedTo>
            <group>CoPromoterDataReview</group>
        </sharedTo>
    </listViews>
</CustomObject>